# expert-system-network-diagnosing-

./: README.md  pyproject.toml  requirements.txt  setup.py
app/: dashboard.py  main.py
data/raw/: network_metrics_sample.csv
models/: label_encoder.pkl  preprocessor.pkl  trained_model.pkl
network_expert_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
notebooks/: experimentation.ipynb
src/: data_preprocessing.py  evaluator.py  feature_engineering.py  inference_engine.py  ml_model.py  rules.py  utils.py
