[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-expert-system"
version = "0.1.0"
description = "Hybrid rule-based and ML expert system for network troubleshooting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  "streamlit>=1.35.0",
]

[project.scripts]
network-expert = "app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]
